AC_INIT([twobit_gitpoller], [0.1])
AC_PREREQ([2.69])
AM_INIT_AUTOMAKE([1.11])
AM_PATH_PYTHON([2.7.9])
AC_CONFIG_SRCDIR([src/twobit-gitpoller.conf.in])
AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/twobit_gitpoller/Makefile
                 src/twobit/buildbotutil/Makefile
                 src/twobit/gitutil/Makefile
                 src/twisted/plugins/Makefile])
AC_OUTPUT
