twisted = twisted_gitpoller
twisted_pollerdir = $(pythondir)/twobit/twisted_gitpoller/
twisted_poller_PYTHON = \
    $(twisted)/__init__.py \
	$(twisted)/githuborgrepopollerservice.py \
	$(twisted)/gitpollerservice.py \
	$(twisted)/gitpollerservicefactory.py \
	$(twisted)/pollermultiservice.py

MOSTLYCLEANFILES = *pyc *pyo
